# prompt-eval-pipeline

./: .gitignore  DOCUMENTATION.docx  DOCUMENTATION.md  DOCUMENTATION.tex  PROMPT_ENHANCEMENT_GUIDE.md  README.md  TECH_DOC.md  generate_docx.py  package-lock.json  pyproject.toml
.claude/: settings.local.json
configs/: eval_config.yaml  eval_definition-extractor.yaml  eval_implication-extractor.yaml  eval_narrative-function-extractor.yml  eval_summarizer.yaml
configs/en/: eval_narrative-function-extractor.yml
configs/fr/: eval_narrative-function-extractor.yml
pres/: en_presentation.html  fr_presentation.html
pres/img/: .$prompt_evaluation.drawio.bkp  .$prompt_evaluation_detail.drawio.bkp  prompt_evaluation_1.drawio  prompt_evaluation_2.drawio  prompt_evaluation_3.drawio  prompt_evaluation_4.drawio  prompt_evaluation_5.drawio  prompt_evaluation_detail.drawio
prompts/definition-extractor/: definition-extractor_v1.yaml  definition-extractor_v2.yaml  definition-extractor_v3.yaml
results/: comparison.md  summarizer_v1_268c58a7_20251221_110201.csv  summarizer_v1_268c58a7_20251221_110201.html  summarizer_v1_268c58a7_20251221_110201.json  summarizer_v1_268c58a7_20251221_110201.md  summarizer_v2_cfbd0888_20251221_110201.csv  summarizer_v2_cfbd0888_20251221_110201.html  summarizer_v2_cfbd0888_20251221_110201.json  summarizer_v2_cfbd0888_20251221_110201.md  summarizer_v3_e752d1ac_20251221_110201.csv  summarizer_v3_e752d1ac_20251221_110201.html  summarizer_v3_e752d1ac_20251221_110201.json  summarizer_v3_e752d1ac_20251221_110201.md
src/prompt_eval/: __init__.py  cli.py  (+7 more)
(+210 files in other folders)
